# rss_to_bsky

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.dockerignore  pyproject.toml
.github/workflows/: build.yaml  test.yaml
src/rss_post/: __init__.py  bsky.py  logging_config.py  norwalk_civic_clerk.py  norwalk_feeds.py  post.py  read_rss.py
tests/: test_post.py  test_read_rss.py
