[project]
name = "rss-post"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chapin Bryce", email = "mail@chapinb.com" }
]
requires-python = ">=3.11"
dependencies = [
    "atproto>=0.0.55",
    "feedparser>=6.0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-watcher>=0.4.3",
    "pytest>=8.3.3",
]
