[project]
name = "rss-post"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Chapin Bryce", email = "mail@chapinb.com" }
]
requires-python = ">=3.11"
dependencies = [
    "atproto>=0.0.55",
    "beautifulsoup4>=4.12.3",
    "feedparser>=6.0.11",
    "httpx>=0.27.2",
    "python-decouple>=3.8",
    "pytz>=2024.2",
    "selenium>=4.27.0",
]

[dependency-groups]
dev = [
    "pytest-watcher>=0.4.3",
    "pytest>=8.3.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rss_post"]

[tool.uv]
package = true

[project.scripts]
norwalk = "rss_post.norwalk_feeds:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
